- Allow "static" and "const" or "volatile" to come in any order in C code
- Fixed a problem with detection of "static" functions (ones without member variable references) which use coginit on non-static functions.
- Updated definition of P2 getct instruction to allow wc
- Various small changes to builtin functions for spin2cpp
- Relax warnings for use of constants in range $1c0-$1ef as registers

Version 4.0.5
- Fixed static function declarations in C so that declarations in different files do not conflict
- Fixed enum declaration scope in C
- Made optimizer take care not to create djnz with large offsets
- Added a warning in PASM for some uses of integers without '#'.
- Added some missing propeller2.h functions
- Fixed a problem parsing Spin comment blocks containing newlines after an empty REPEAT statement
- Made instructions be automatically aligned in ORG mode (not ORGH mode)
- Made -x flag disable LF->CR+LF translation on serial port
- Print errors for function declared twice
- Re-arranged internal code to make it possible to distinguish C vs C++ or spin1 vs spin2
- Allow empty parameter lists in Spin
- Allow address of function to be taken in Spin
- Added checks for redefined constants

Version 4.0.4
- Implemented top level __asm in C
- Implemented Spin compatible __pasm in C
- Implemented asm shared in BASIC
- Fixed some namespace conflicts between BASIC and C
- Fixed a typo in stdlib.h which caused conflict with math.h
- Added auto baud rate detection capability to SmartSerial
- Fixed an error in switch statement expressions in BASIC
- Fixed the C _pinw function
- Fixed MOD operator in BASIC to work like FastBASIC.
- Printed an error for RES after ORGH
- Allow $ expressions inside RES
- Allow $ to start a hex number in BASIC
- Revert clkfreq and clkmode in BASIC to their old behavior

Version 4.0.3
- Implemented C++ references like "int &c"
- Implemented passing structs by value in C
- Implemented GCC compatible statement expressions